MATE-64 : [FEAT] DTO값 추가에 의한 파라미터 추가